--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "sonner": "^1.4.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
