--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,11 +8,15 @@
     "@rocketseat/eslint-config/next",
     "plugin:@next/next/recommended"
   ],
+
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "react"],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-useless-escape": "off"
+  }
 }
